[gd_scene load_steps=2 format=3 uid="uid://1sdbw5y4w3sb"]

[ext_resource type="Script" path="res://src/ui_new/screens/MapScreen.gd" id="1_mapscript"]
[ext_resource type="StyleBox" uid="uid://cwmijfvtxcg4s" path="res://themes/card.tres" id="2_d8tlm"]

[node name="MapScreen" type="Control"]
script = ExtResource("1_mapscript")
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0


[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MapContainer" type="Control" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ZonesScroll" type="ScrollContainer" parent="VBoxContainer/MapContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ZonesList" type="VBoxContainer" parent="VBoxContainer/MapContainer/ZonesScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
